objects/BMCServiceDesk__CMDB_Staging__c.object
<CustomObject>
    <description>CMDB_Staging. This table allows the integration tools to push data to cmdb. This is an intermediate table that holds Configuration Items temporarily for processing</description>
    <fields>
        <fullName>BMCServiceDesk__ACT_ActivityType__c</fullName>
        <label>ActivityType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Interaction</fullName>
                </value>
                <value>
                    <fullName>Business Process</fullName>
                </value>
                <value>
                    <fullName>Start</fullName>
                </value>
                <value>
                    <fullName>End</fullName>
                </value>
                <value>
                    <fullName>Decision</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AD_DomainType__c</fullName>
        <label>DomainType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>J2EE Domain</fullName>
                </value>
                <value>
                    <fullName>NT Domain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AI_Application_Infrastructure_Type__c</fullName>
        <label>Application Infrastructure Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Server</fullName>
                </value>
                <value>
                    <fullName>SAP System</fullName>
                </value>
                <value>
                    <fullName>Siebel Enterprise</fullName>
                </value>
                <value>
                    <fullName>Database System</fullName>
                </value>
                <value>
                    <fullName>Clustered Application Server</fullName>
                </value>
                <value>
                    <fullName>Other (default)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AI_Infrastructure_Instance_Type__c</fullName>
        <label>Infrastructure Instance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__APP_ApplicationType__c</fullName>
        <label>ApplicationType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>StandardApplication</fullName>
                </value>
                <value>
                    <fullName>InfrastructureApplication</fullName>
                </value>
                <value>
                    <fullName>ClusteredApplication</fullName>
                </value>
                <value>
                    <fullName>CompositeApplicaiton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__APS_Application_Service_Type__c</fullName>
        <label>Application Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP Service</fullName>
                </value>
                <value>
                    <fullName>J2EE Module</fullName>
                </value>
                <value>
                    <fullName>J2EE Servlet</fullName>
                </value>
                <value>
                    <fullName>Siebel Component</fullName>
                </value>
                <value>
                    <fullName>Siebel Component Group</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__APS_Path_Name__c</fullName>
        <label>Path Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AP_SystemClassId__c</fullName>
        <inlineHelpText>Use this field to enter the class of the system where the endpoint resides. This value is automatically propagated from the related instance.</inlineHelpText>
        <label>SystemClassId</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AP_SystemName__c</fullName>
        <inlineHelpText>Use this field to enter the name of the system where the endpoint resides. This value is automatically propagated from the related instance.</inlineHelpText>
        <label>SystemName</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AS_BuildNumber__c</fullName>
        <label>BuildNumber</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AS_PatchNumber__c</fullName>
        <label>PatchNumber</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AS_ServicePack__c</fullName>
        <label>ServicePack</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AssemblyId__c</fullName>
        <inlineHelpText>This uniquely identifies the assembly associated with this CI</inlineHelpText>
        <label>Assembly Id</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BEL_Bios_Characteristics__c</fullName>
        <label>BIOS Characteristics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BEL_Primary_BIOS__c</fullName>
        <label>Primary BIOS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BEL_Primary_OS__c</fullName>
        <label>Primary OS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BE_CITag__c</fullName>
        <inlineHelpText>Use this field to enter the tag number of the physical entity represented by the instance.</inlineHelpText>
        <label>Asset #</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BE_Description__c</fullName>
        <inlineHelpText>Use this field to enter a description of the instance.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BE_ManufacturerName__c</fullName>
        <label>Manufacturer Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BE_MarkAsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you want to mark this instance as soft deleted. You can exclude it from searches and other activities by using the MarkAsDeleted attribute in your conditions. Additionally, you can preserve its relationships for future reuse.</inlineHelpText>
        <label>Mark As Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BE_Model__c</fullName>
        <inlineHelpText>Use this field to enter the name by which the entity represented by the instance is generally known. For example, the model name of an Acme widget might be Pro Widget 2000.</inlineHelpText>
        <label>Model</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BE_Name__c</fullName>
        <inlineHelpText>Use this field to enter a unique alphanumeric identifier that you want to assign to the instance.</inlineHelpText>
        <label>Instance Name</label>
        <length>254</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BE_Notes__c</fullName>
        <inlineHelpText>Use this field to enter general notes about the instance.</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BE_Priority__c</fullName>
        <description>Link this to Priority module</description>
        <inlineHelpText>From the list of options, select the priority of the instance. The priority of the instance indicates the importance of the instance in the CMDB.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BE_SerialNumber__c</fullName>
        <inlineHelpText>Use this field to enter the manufacturer-allocated number used to identify the physical entity represented by the instance.</inlineHelpText>
        <label>Serial #</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BE_ShortDescription__c</fullName>
        <inlineHelpText>Use this field to enter a short description of the instance. You can configure the CI Explorer to display the short description for the instance to let quickly view information about the instance.</inlineHelpText>
        <label>Short Description</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BE_Site__c</fullName>
        <inlineHelpText>Use this field to enter the site information</inlineHelpText>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BE_Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requirements</fullName>
                    <default>true</default>
                    <label>Requirements</label>
                </value>
                <value>
                    <fullName>Defined</fullName>
                </value>
                <value>
                    <fullName>Analyzed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Chartered</fullName>
                </value>
                <value>
                    <fullName>Designed</fullName>
                </value>
                <value>
                    <fullName>Developed</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Tested</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Unpublished</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BE_Supported__c</fullName>
        <inlineHelpText>From the list of options, select whether technical support is provided for this instance. If the value set to No, the instance is deprecated and support might not be provided for it in the future. If support is not required for the instance, select N/A.</inlineHelpText>
        <label>Supported</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BE_TokenId__c</fullName>
        <inlineHelpText>Use this field to enter the unique identifier populated by some discovery applications and used by the Reconciliation Engine to identify instances.</inlineHelpText>
        <label>Token Id</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BE_Version_Number__c</fullName>
        <inlineHelpText>Use this field to enter the version number of the physical entity represented by the instance.</inlineHelpText>
        <label>Version Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BE_WarrantyExpirationDate__c</fullName>
        <inlineHelpText>Use this field to select the date when the warranty expires for the instance.</inlineHelpText>
        <label>Warranty Exp Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BP_SourceLocation__c</fullName>
        <label>SourceLocation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BS_CostDescription__c</fullName>
        <label>Cost Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BS_End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BS_FKBusinessService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Service of</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Business Services</relationshipLabel>
        <relationshipName>Business_Services_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BS_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BS_ServiceType__c</fullName>
        <label>ServiceType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>BusinessService</fullName>
                </value>
                <value>
                    <fullName>TechnicalService</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BS_Service_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Services_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BS_Service_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Services</relationshipLabel>
        <relationshipName>Business_Services_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BS_Service_Review_Date__c</fullName>
        <label>Service Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BS_Service_hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Business_Services_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BS_Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Analyzed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Chartered</fullName>
                </value>
                <value>
                    <fullName>Defined</fullName>
                </value>
                <value>
                    <fullName>Designed</fullName>
                </value>
                <value>
                    <fullName>Developed</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Requirements</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Tested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BS_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CA_Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base Board</fullName>
                </value>
                <value>
                    <fullName>Video Card</fullName>
                </value>
                <value>
                    <fullName>Sound Card</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CDR_Max_Component_Length__c</fullName>
        <label>Maximum Component Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CDR_Transfer_Rate__c</fullName>
        <label>Transfer Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CEP_PortNumber__c</fullName>
        <label>PortNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CH_Chassis_Type__c</fullName>
        <label>Chassis Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Low-profile desktop</fullName>
                </value>
                <value>
                    <fullName>Pizza box</fullName>
                </value>
                <value>
                    <fullName>Mini tower</fullName>
                </value>
                <value>
                    <fullName>Tower</fullName>
                </value>
                <value>
                    <fullName>Portable</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Notebook</fullName>
                </value>
                <value>
                    <fullName>Hand-held</fullName>
                </value>
                <value>
                    <fullName>Docking Station</fullName>
                </value>
                <value>
                    <fullName>All-in-one</fullName>
                </value>
                <value>
                    <fullName>Subnotebook</fullName>
                </value>
                <value>
                    <fullName>Space-saving</fullName>
                </value>
                <value>
                    <fullName>Lunch box</fullName>
                </value>
                <value>
                    <fullName>Main system Chassis</fullName>
                </value>
                <value>
                    <fullName>Expansion Chassis</fullName>
                </value>
                <value>
                    <fullName>Subchassis</fullName>
                </value>
                <value>
                    <fullName>Bus-expansion Chassis</fullName>
                </value>
                <value>
                    <fullName>Peripheral Chassis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CH_Number_of_Power_Cords__c</fullName>
        <label>Number of Power Cords</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CH_Rack_Mountable__c</fullName>
        <label>Rack Mountable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CLU_ClusterType__c</fullName>
        <label>ClusterType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Software Cluster</fullName>
                </value>
                <value>
                    <fullName>Hardware Cluster</fullName>
                </value>
                <value>
                    <fullName>SoftwareServerCluster</fullName>
                </value>
                <value>
                    <fullName>ApplicationInstanceCluster</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CLU_InterconnectAddress__c</fullName>
        <label>InterconnectAddress</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CLU_Interconnect__c</fullName>
        <label>Interconnect</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CLU_MaxNumberOfNodes__c</fullName>
        <label>MaxNumberOfNodes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CLU_Types__c</fullName>
        <label>Types</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CL_ContractLineType__c</fullName>
        <label>ContractLineType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other (0)</fullName>
                </value>
                <value>
                    <fullName>Unknown (1)</fullName>
                </value>
                <value>
                    <fullName>SLA (100)</fullName>
                </value>
                <value>
                    <fullName>OLA (200)</fullName>
                </value>
                <value>
                    <fullName>UPC (300).</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CNC_ConnectivityCollectionType__c</fullName>
        <label>ConnectivityCollectionType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>ConnectivitySegment</fullName>
                </value>
                <value>
                    <fullName>IPConnectivitySubnet</fullName>
                </value>
                <value>
                    <fullName>IPXConnectivityNetwork</fullName>
                </value>
                <value>
                    <fullName>LAN</fullName>
                </value>
                <value>
                    <fullName>WAN</fullName>
                </value>
                <value>
                    <fullName>FCConnectivitySegment</fullName>
                </value>
                <value>
                    <fullName>SystemCollection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CNC_ConnectivityStatus__c</fullName>
        <label>ConnectivityStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Connectivity/Up</fullName>
                </value>
                <value>
                    <fullName>No Connectivity/Down</fullName>
                </value>
                <value>
                    <fullName>Partitioned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CNS_ConnectivityType__c</fullName>
        <label>ConnectivityType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Ethernet</fullName>
                </value>
                <value>
                    <fullName>TokenRing</fullName>
                </value>
                <value>
                    <fullName>FDDI</fullName>
                </value>
                <value>
                    <fullName>FC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CNS_Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CNS_Fixed__c</fullName>
        <label>Fixed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CNS_NetworkID__c</fullName>
        <label>NetworkID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CNS_OtherTypeDescription__c</fullName>
        <label>OtherTypeDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CONT_ContractType__c</fullName>
        <label>ContractType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other (0)</fullName>
                </value>
                <value>
                    <fullName>Unknown (1)</fullName>
                </value>
                <value>
                    <fullName>SLA (100)</fullName>
                </value>
                <value>
                    <fullName>OLA (200)</fullName>
                </value>
                <value>
                    <fullName>UPC (300)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CO_Cost_Amount__c</fullName>
        <label>Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CO_Cost_Derived_Flag__c</fullName>
        <label>Cost Derived Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_AdminPasswordStatus__c</fullName>
        <label>AdminPasswordStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Not Implemented</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_BootROMSupported__c</fullName>
        <label>BootROMSupported</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_CapabilityList__c</fullName>
        <label>CapabilityList</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_ChassisBootupState__c</fullName>
        <label>ChassisBootupState</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Safe</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Non-recoverable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_ConfigurationOptions__c</fullName>
        <label>ConfigurationOptions</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_DHCPUse__c</fullName>
        <label>DHCPUse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_DataRate__c</fullName>
        <label>DataRate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_Domain__c</fullName>
        <label>Domain</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_EnvironmentSpecification__c</fullName>
        <label>EnvironmentSpecification</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_ExpansionInterface__c</fullName>
        <label>ExpansionInterface</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CS_Expansion__c</fullName>
        <label>Expansion</label>
        <length>254</length>
        <type>Text</type>
    </fields>
</CustomObject>